--- a/assets/scss/components/_slider-style.scss
+++ b/assets/scss/components/_slider-style.scss
@@ -1,194 +1,213 @@
-//@use "../mixins/index" as *;
-//@use "../presets/index" as *;
-//
-//.slider__container {
-//  position: relative;
-//  height: 100vh;
-//}
-//
-//.slides {
-//  padding: 0;
-//  margin: 0;
-//  list-style: none;
-//}
-//
-//.slide {
-//  width: 100%;
-//  height: 100%;
-//  position: absolute;
-//  inset: 0;
-//  opacity: 0;
-//  z-index: -999;
-//  text-align: center;
-//  transition: opacity 1s;
-//  background-size: cover;
-//  background-position: 50% 50%;
-//  font-size: 40px;
-//  color: #fff;
-//}
-//
-//.active {
-//  opacity: 1;
-//  z-index: 0;
-//
-//}
-//
-//.btn {
-//  &__controls {
-//    top: 50%;
-//    width: 100%;
-//    height: 100%;
-//    position: absolute;
-//    display: flex;
-//    align-items: center;
-//    justify-content: space-between;
-//    transform: translateY(-50%);
-//  }
-//
-//  &__control {
-//    font-size: 3em;
-//    color: white;
-//  }
-//
-//
-//  &__play {
-//    font-size: 10em;
-//    opacity: 0;
-//    transition: 1s;
-//    cursor: pointer;
-//    @include md() {
-//      font-size: 5em;
-//    }
-//  }
-//
-//  &__play:hover {
-//    opacity: 1;
-//  }
-//
-//  &__pause {
-//    font-size: 10em;
-//    opacity: 0;
-//    transition: 1s;
-//    cursor: pointer;
-//    @include md() {
-//      font-size: 5em;
-//    }
-//  }
-//
-//  &__pause:hover {
-//    opacity: 1;
-//  }
-//
-//  &__prev {
-//    width: 10%;
-//    display: grid;
-//    justify-content: start;
-//    align-content: center;
-//  }
-//
-//  &__prev::before {
-//    content: "";
-//    position: absolute;
-//    top: 0;
-//    bottom: 0;
-//    left: 0;
-//    width: 10%;
-//    opacity: 0;
-//    transition: opacity 0.5s;
-//    background: linear-gradient(90deg, rgba(21, 21, 23, 0.8) 0%, rgba(0, 0, 0, 0) 98%);
-//  }
-//
-//  &__prev:hover::before {
-//    opacity: 1;
-//  }
-//
-//  &__next {
-//    height: 100%;
-//    width: 10%;
-//    display: grid;
-//    justify-content: end;
-//    align-content: center;
-//  }
-//
-//  &__next::before {
-//    content: "";
-//    position: absolute;
-//    right: 0;
-//    top: 0;
-//    bottom: 0;
-//    width: 10%;
-//    opacity: 0;
-//    transition: opacity 0.5s;
-//    background: linear-gradient(90deg, rgba(21, 21, 23, 0) 0%, rgba(0, 0, 0, 0.8) 98%);
-//  }
-//
-//  &__next:hover::before {
-//    opacity: 1;
-//  }
-//}
-//
-//.fa-solid {
-//}
-//
-//.fa-chevron-left {
-//  margin-inline: 20px;
-//  cursor: pointer;
-//  z-index: 10;
-//  text-shadow: 0 0 8px #ffffff;
-//}
-//
-//.fa-regular {
-//}
-//
-//.fa-circle-play {
-//}
-//
-//.fa-circle-pause {
-//}
-//
-//.fa-chevron-right {
-//  margin-inline: 20px;
-//  cursor: pointer;
-//  z-index: 10;
-//  text-shadow: 0 0 8px #ffffff;
-//}
-//
-//.indicators {
-//  &__container {
-//    left: 50%;
-//    transform: translateX(-50%);
-//    position: absolute;
-//    bottom: 60px;
-//    display: flex;
-//    gap: 20px;
-//    @include md() {
-//      bottom: 30px;
-//    }
-//    @include mdh() {
-//      bottom: 30px;
-//    }
-//  }
-//
-//  &__item {
-//    width: 50px;
-//    height: 20px;
-//    cursor: pointer;
-//    background-color: rgba(68, 89, 110, 0.4);
-//    border: 2px solid #ffffff;
-//    box-shadow: #ffffff -1px 1px 7px 2px;
-//    @include md() {
-//      width: 30px;
-//      height: 15px;
-//    }
-//    @include mdh() {
-//      width: 30px;
-//      height: 15px;
-//    }
-//  }
-//}
-//
-//.indicator__active {
-//  background-color: #ffffff;
-//}
-//
-//
+@use "../mixins/index" as *;
+@use "../presets/index" as *;
+
+.wrapper {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  z-index: 1;
+}
+
+.slider__container {
+  position: relative;
+  height: 100vh;
+}
+
+.slides {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.slide {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  z-index: -999;
+  text-align: center;
+  transition: opacity 1s;
+  background-size: cover;
+  background-position: 50% 50%;
+  font-size: 40px;
+  color: #fff;
+}
+
+.active {
+  opacity: 1;
+  z-index: 0;
+
+}
+
+.btn {
+  &__controls {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+  }
+
+  &__control {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    font-size: 3em;
+    color: #ffffff;
+    display: flex;
+  }
+
+
+  &__play {
+    align-items: center;
+    right: 50%;
+    transform: translateX(50%);
+    font-size: 10em;
+    opacity: 0;
+    transition: 1s;
+    cursor: pointer;
+    @include md() {
+      font-size: 5em;
+    }
+  }
+
+  &__play:hover {
+    opacity: 1;
+  }
+
+  &__pause {
+    align-items: center;
+    right: 50%;
+    transform: translateX(50%);
+    font-size: 10em;
+    opacity: 0;
+    transition: 1s;
+    cursor: pointer;
+    @include md() {
+      font-size: 5em;
+    }
+  }
+
+  &__pause:hover {
+    opacity: 1;
+  }
+
+  &__prev {
+    justify-content: start;
+    align-items: center;
+    left: 0;
+    width: 10%;
+
+  }
+
+  &__prev::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    transition: opacity 0.5s;
+    background: linear-gradient(90deg, rgba(21, 21, 23, 0.8) 0%, rgba(0, 0, 0, 0) 98%);
+  }
+
+  &__prev:hover::before {
+    opacity: 1;
+  }
+
+  &__next {
+    justify-content: end;
+    align-items: center;
+    right: 0;
+    width: 10%;
+  }
+
+  &__next::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    opacity: 0;
+    transition: opacity 0.5s;
+    background: linear-gradient(90deg, rgba(21, 21, 23, 0) 0%, rgba(0, 0, 0, 0.8) 98%);
+  }
+
+  &__next:hover::before {
+    opacity: 1;
+  }
+}
+
+.fa-solid {
+}
+
+.fa-chevron-left {
+  position: absolute;
+  margin-inline: 20px;
+  cursor: pointer;
+  z-index: 10;
+  text-shadow: 0 0 8px #ffffff;
+}
+
+.fa-regular {
+}
+
+.fa-circle-play {
+  position: absolute;
+  transform: translateX(-50%);
+}
+
+.fa-circle-pause {
+  position: absolute;
+  transform: translateX(-50%);
+}
+
+.fa-chevron-right {
+  position: absolute;
+  margin-inline: 20px;
+  cursor: pointer;
+  z-index: 10;
+  text-shadow: 0 0 8px #ffffff;
+}
+
+.indicators {
+  &__container {
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    bottom: 60px;
+    display: flex;
+    gap: 20px;
+    @include md() {
+      bottom: 30px;
+    }
+    @include mdh() {
+      bottom: 30px;
+    }
+  }
+
+  &__item {
+    width: 50px;
+    height: 20px;
+    cursor: pointer;
+    background-color: rgba(68, 89, 110, 0.4);
+    border: 2px solid #ffffff;
+    box-shadow: #ffffff -1px 1px 7px 2px;
+    @include md() {
+      width: 30px;
+      height: 15px;
+    }
+    @include mdh() {
+      width: 30px;
+      height: 15px;
+    }
+  }
+}
+
+.indicator__active {
+  background-color: #ffffff;
+}
+
+
